login-register-setup redux persister

--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -20,7 +20,7 @@
 
 .register-page {
     color: var(--color-black);
-    background: var(--color-light);
+    background: var(--color-white);
 
 
     // Components
@@ -33,6 +33,7 @@
         // width: 100%;
         padding: 0 2rem;
         margin: 0 auto;
+       
     }
 
 
