--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -1,17 +1,17 @@
 .home{
     width: 100%;
-    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
     margin: auto;
    
     .overlay{
-         position: absolute;
-         height: 100%;
+        position: relative;
+         right: 0;
+         left: 0;
+         height: 80px;
          width: 100%;
          top: 0;
-         bottom: 0;
          z-index: 1;
 
          img{
@@ -221,13 +221,12 @@
 }
 //room-----
 .home-room-container{
-    position: relative;
-    top: 0;
-    left: 0;
     margin-top: 225px;
-    height: 800px;
+    height: 70px;
     .banner-room{
-      
+        position: relative;
+        top: 0;
+        left: 0;
         width:100%;
         height: 100%;
         img{
@@ -237,12 +236,14 @@
     }
     .list-room{
         position: absolute;
-        translate: 173px -920px;
-        //100% display// translate: 30% -130%;
+        left: 0;
+        right: 0;
         margin: 0 auto;
-        margin-top: 180px;
         max-width: 1170px;
         padding: 15px;
+
+      
+       
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         column-gap: 25px;
