--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -1,3 +1,4 @@
+//Banner
 .home{
     width: 100%;
     display: flex;
@@ -35,10 +36,18 @@
             background-color: #ffffff;
             border-radius: 10px;
             width: 78%;
-            translate: 0% -300%;
+            translate: 0% -350%;
             display: flex;
             flex-direction: column;
             gap: 20px;
+
+            .content{
+
+                .input-search{
+                    height: 80px;
+                }
+
+            }
         }
     }
 
