--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -35,8 +35,8 @@ li{
 }
 
 .container{
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+    // padding-left: 1.5rem;
+    // padding-right: 1.5rem;
 }
 
 .icon{
