--- a/src/components/Tour/tourDetail.scss
+++ b/src/components/Tour/tourDetail.scss
@@ -1,4 +1,4 @@
-.home{
+.home-detail{
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -10,7 +10,7 @@
         left: 0;
         margin: 0 auto;
 
-    .overlay{
+    .overlay-detail{
         height: 320px;
         width: 100%;
         margin: 0 auto;
