--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -274,6 +274,7 @@
             flex-direction: column;
             background-color: #ffffff;
             border-radius: 12px;
+            cursor: pointer;
            
             .room-media{
                 
