--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -1,9 +1,68 @@
-footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 50px;
 
-    text-align: center;
-    line-height: 50px;
+.footer{
+    background-color: #001A40;
+    padding: 30px 0;
+    position: relative;
+    //bottom: -300px;
+   
+    top: 45px;
+    bottom:0;
+    left: 0;
+    width: 100%;
+    height: 50vh;
+
+    
+   .container-footer{
+    max-width: 1170px;
+    margin: 0 auto;
+    
+    .row{
+        display:  flex;
+        flex-wrap: wrap;
+       
+        .footer-col{
+            width: calc(25% - 30px);
+            padding: 0 15px;
+            ul{
+                list-style: none;
+               
+                li{
+                    margin-bottom: 10px;
+                    a{
+                        font-size: 16px;
+                        text-transform: capitalize;
+                        color: rgba(255, 255, 255, 0.841);
+                        
+                    }
+                }
+            }
+            h4{
+               font-size: 18px;
+               color: white; 
+               text-transform: capitalize;
+               margin-bottom: 35px;
+               position: relative;
+               left: 0;
+               bottom: 0;
+               &::before{
+                   content: '';
+                   position: absolute;
+                   left: 0;
+                   bottom: -10px;
+                   background-color: rgb(255, 230, 0);
+                   height: 2px;
+                   width: 50px;
+
+               }
+            }
+            .social-links{
+                display: inline-block;
+                display: flex;
+                gap: 15px;
+                font-size: 23px;
+                color: #ffffff;
+            }
+        }
+    }
+   }
 }
