--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -241,15 +241,18 @@
 }
 //room-----
 .home-room-container{
-    margin-top: 150px;
-    height: 70px;
+    margin-top: 80px;
+    height: 700px;
+    // position: relative;
+    // top: 0;
+    // left: 0;
     .banner-room{
-        position: relative;
-        top: 0;
-        left: 0;
+        
         width:100%;
         height: 100%;
         img{
+            width:100%;
+            height: 100%;
             display: flex;
             object-fit: cover;
         }
@@ -261,7 +264,7 @@
         margin: 0 auto;
         max-width: 1170px;
         padding: 15px;
-
+        translate: 0 -115%;
       
        
         display: grid;
