--- a/src/components/Room/listRoom.scss
+++ b/src/components/Room/listRoom.scss
@@ -147,3 +147,36 @@
     gap: 15px;
     width: 100%;
 }
+
+.cardDiv-room{
+  margin: 0  auto;
+  //  background-color: #ffffff;
+    border-radius: 10px;
+    width: 76%;
+    translate: 0% -280%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    .content{
+
+        .input-search-room{
+            height: 70px;
+        }
+        .btn-search-room{
+          translate: 87% -170%;
+          .btn-search-holiday{
+            border: none;
+            padding: 8px;
+            background-color: #e54141;
+            border-radius: 5px;
+            color: #ffffff;
+            font-weight: 500;
+            cursor: pointer;
+          }
+          
+        }
+
+    }
+}
+
