--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -1,10 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
 *,
 *::before,
 *::after {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: Arial;
+  font-family: "Inter", sans-serif;
 }
 
 :root {
@@ -12,8 +13,8 @@
 }
 
 body {
-  overflow: hidden;
-  color: #e77676;
+  line-height: 1.5;
+  overflow-x: hidden;
   color: black;
   background-color: var(--color-white);
 }
@@ -22,17 +23,8 @@ a {
   text-decoration: none;
 }
 
-li {
-  list-style: none;
-}
-
 .section {
   padding: 4rem 0 2rem;
-}
-
-.container {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
 }
 
 .icon {
@@ -50,23 +42,6 @@ li {
   align-items: center;
 }
 
-.btn {
-  padding: 0.6rem 1.5rem;
-  background-color: rgb(0, 115, 255);
-  border-radius: 3rem;
-  border: none;
-  cursor: pointer;
-  outline: none;
-}
-.btn a {
-  color: white;
-  font-weight: 500;
-}
-.btn:hover {
-  background-color: rgb(2, 103, 226);
-}
-
 img {
   width: 100%;
-  height: auto;
 }/*# sourceMappingURL=reset.css.map */
