--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,15 +1,16 @@
 .header {
+   margin: 0;
    color: #ffffff;
    position: fixed;
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: #001A40;
-   width: 100%;
+   width: 100vw;
    padding: 1rem;
    z-index: 1000;
    overflow-x: hidden;
-
+  
    .logoDiv{
         .logo{
             color: #ffffff;
