--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -21,6 +21,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+           // opacity: 85%;
         }
     }
 
@@ -258,6 +259,7 @@
             height: 100%;
             display: flex;
             object-fit: cover;
+            opacity: 90%;
         }
     }
     .list-room{
@@ -289,6 +291,7 @@
                     object-fit: cover;
                     width: 100%;
                     border-radius: 12px 12px 0 0;
+                    
                  }
          
             }
