--- a/src/pages/news/new.scss
+++ b/src/pages/news/new.scss
@@ -21,6 +21,14 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      
+    }
+
+    .title-banner-new{
+        font-size: 27px;
+        font-weight: 700;
+        color: #ffffff;
+        translate: 45% -550%;
     }
   }
 }
