--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -186,3 +186,10 @@
         }
     }
 }
+
+.login-footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
