--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,71 +1,62 @@
 .header {
-   margin: 0;
-   color: #ffffff;
-   position: fixed;
-   display: flex;
-   align-items: center;
-   justify-content: space-between;
-   background-color: #001A40;
-   width: 100vw;
-   padding: 1rem;
-   z-index: 1000;
-   overflow-x: hidden;
-  
-   .logoDiv{
-        .logo{
-            color: #ffffff;
-            font-weight: 600;
-            cursor: pointer;
-            align-items: center;
-            justify-content: center;
+  margin: 0;
+  color: #ffffff;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #001a40;
+  width: 100vw;
+  padding: 1rem;
+  z-index: 1000;
+  overflow-x: hidden;
 
-            .icon{
-                color: #ffffff;
-                font-size: 25px;
-            }
-        }
-   }
+  .logoDiv {
+    .logo {
+      color: #ffffff;
+      font-weight: 600;
+      cursor: pointer;
+      align-items: center;
+      justify-content: center;
 
-   .navBar{
-   
-
-    .navList{
-        display: flex;
-        gap: 35px;
-       
-        .navItem{
-            list-style: none;
-            .navLink{
-                color: #ffffff;
-                font-size: 1rem;
-                text-transform: uppercase;
-                font-weight: 500;
-                cursor: pointer;
-
-               
-
-                &:hover{
-                    color: rgb(241, 233, 18)
-                }
-
-
-            }
-
-
-            .active{
-                color: rgb(241, 233, 18)
-            }
-        }
-
+      .icon {
+        color: #ffffff;
+        font-size: 25px;
+      }
     }
-}
+  }
 
+  .navBar {
+    .navList {
+      display: flex;
+      gap: 35px;
 
-   .toggleNavbar{
-    cursor: pointer;
-        .icon{
-            font-size: 25px;
-            color: #ffffff;
+      .navItem {
+        list-style: none;
+        .navLink {
+          color: #ffffff;
+          font-size: 1rem;
+          text-transform: uppercase;
+          font-weight: 500;
+          cursor: pointer;
+
+          &:hover {
+            color: rgb(241, 233, 18);
+          }
         }
-   }
+
+        .active {
+          color: rgb(241, 233, 18);
+        }
+      }
+    }
+  }
+
+  .toggleNavbar {
+    cursor: pointer;
+    .icon {
+      font-size: 25px;
+      color: #ffffff;
+    }
+  }
 }
